// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty_array.rb - ruby-verify: empty_array.rb 1`] = `
empty_array = []
empty_array
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
empty_array = []
empty_array

`;

exports[`number_array.rb - ruby-verify: number_array.rb 1`] = `
numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]
numbers

`;

exports[`string_array.rb - ruby-verify: string_array.rb 1`] = `
def strings
  %w(
    a
    b
    c
    d
  )
end

strings
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
def strings
  [    a,     b,     c,     d]
end
strings

`;

exports[`symbol_array.rb - ruby-verify: symbol_array.rb 1`] = `
def symbols
  %i(
    a
    b
    c
    d
  )
end

symbols
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
def symbols
  [    a,     b,     c,     d]
end
symbols

`;
